[project]
name = "tas-helpers"
version = "0.1.0"
description = "A python package that includes a bunch of helper functions related to TAS (Temporal Action Segmentation)."
authors = [
    {name = "raideno56",email = "nadirkichou@hotmail.fr"}
]
maintainers = [
    {name = "raideno56",email = "nadirkichou@hotmail.fr"}
]
homepage = "https://raideno.github.io/tas-helpers/"
documentation = "https://raideno.github.io/tas-helpers/"
repository = "https://github.com/raideno/tas-helpers"
keywords = ["tas-helpers", "tas", "temporal action segmentation"]
readme = "README.md"

requires-python = ">=3.12"
dependencies = [
    "numpy (>=1.9.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "python-levenshtein (>=0.27.1,<0.28.0)",
]
packages = [
    {include = "tas_helpers", from = "."}
]
include = [
    { path = "README.md", format = "sdist" },
    { path = "README.md", format = "wheel" },
]
exclude = [
    { path = "tests" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"